fix: Make the alignment of hero title left when in big screen, and center when in small screen

--- a/src/styles/components/Layout/Header.module.css
+++ b/src/styles/components/Layout/Header.module.css
@@ -101,7 +101,7 @@
   font-size: 12px;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 777px) {
   .header-container {
     padding: 10px 0 38px 0;
   }
