--- a/src/styles/components/home/Hero.module.css
+++ b/src/styles/components/home/Hero.module.css
@@ -26,7 +26,7 @@
 }
 
 .title {
-  display: flex;
+  display: block;
   flex-direction: column;
   margin-left: 2.4rem;
   margin-right: 1rem;
@@ -35,9 +35,11 @@
   text-transform: uppercase;
   color: hsl(var(--body) / 0.8);
   font-weight: 800;
-  font-size: clamp(40.66px, 5vw, 5rem);
+  font-size: clamp(44px, 5vw, 86px);
   line-height: 54.5px;
-  letter-spacing: 1.21px;
+  letter-spacing: -1.21px;
+  text-align: center;
+  width: min(500px, 70%);
 }
 
 .title span:nth-child(2) {
@@ -64,7 +66,7 @@
   border: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 600px) {
   .hero-content {
     align-items: start;
     transform: translateY(-20%);
@@ -73,6 +75,7 @@
   .title {
     margin: 0;
     line-height: 60px;
+    text-align: left;
   }
 
   .title span:nth-child(2) {
@@ -82,12 +85,12 @@
 
 @media (min-width: 1024px) {
   .title {
-    line-height: 73.5px;
+    line-height: 1.3;
   }
 }
 
 @media (min-width: 1280px) {
   .title {
-    line-height: 83.5px;
+    line-height: 1.2;
   }
 }
